@startuml

title __NOTIFICATIONS's Class Diagram__\n

  namespace ru.ubunterro.servicehelper {
    namespace ui.notifications {
      class ru.ubunterro.servicehelper.ui.notifications.NotificationsFragment {
          + onCreateView()
      }
    }
  }
  

  namespace ru.ubunterro.servicehelper {
    namespace ui.notifications {
      class ru.ubunterro.servicehelper.ui.notifications.NotificationsViewModel {
          - mText : MutableLiveData<String>
          + NotificationsViewModel()
          + getText()
      }
    }
  }
  

  ru.ubunterro.servicehelper.ui.notifications.NotificationsFragment -up-|> android.support.v4.app.Fragment
  ru.ubunterro.servicehelper.ui.notifications.NotificationsFragment o-- ru.ubunterro.servicehelper.ui.notifications.NotificationsViewModel : notificationsViewModel
  ru.ubunterro.servicehelper.ui.notifications.NotificationsViewModel -up-|> android.arch.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
